# riceberg-rp

./: .gitignore  Cargo.toml  ISSUE.md  LEARNINGS.md  RICEBERG_COMPACTION_MEMORY_ISSUE.md  build.rs  host.bat  host.sh  memory.x
.cargo/: config.toml
examples/: hexagonal_temperature.rs  riceberg_as7343.rs  riceberg_temperature_usb.rs
src/: db_protocol.rs  lib.rs
src/adapters/: as7343.rs  edge_storage.rs  mod.rs  rp2350_temp.rs  usb_cdc.rs
src/domain/: calibration.rs  mod.rs  reading.rs  spectral.rs
src/ports/: communication.rs  mod.rs  sensor.rs  spectral_sensor.rs  storage.rs
